--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,94 +1,94 @@
 <!doctype html>
-<html >
+<html>
 
-    <head>
-
-        <meta charset="utf-8">
-        <title>Coming Soon | Recruitment world Recruitment world</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="Recruitment world" name="description">
-        <meta content="Nami" name="author">
-        <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/fav.svg">
-
-        <!-- Bootstrap Css -->
-        <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+<head>
+    <meta charset="utf-8">
+    <title>Coming Soon | Recruitment world Recruitment world</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Recruitment world" name="description">
+    <meta content="Nami" name="author">
+    <!-- App favicon -->
+    <link rel="shortcut icon" href="assets/images/fav.svg">
+    <!-- Bootstrap Css -->
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
-        <!-- Icons Css -->
-        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
-        <!-- App Css-->
-        <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
+    <!-- Icons Css -->
+    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
+    <!-- App Css-->
+    <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
-        <!-- custom Css-->
-        <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
+    <!-- custom Css-->
+    <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
+</head>
 
-    </head>
-
-    <body>
-
-        <section class="auth-page-wrapper position-relative bg-light min-vh-100 d-flex align-items-center justify-content-between">
-            <div class="auth-header position-fixed top-0 start-0 end-0 bg-body">
-                <div class="container-fluid">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-2">
-                            <a class="navbar-brand mb-2 mb-sm-0" href="index.html">
-                                <img src="assets/images/logoV.svg" class="card-logo card-logo-dark" alt="logo dark" height="22">
-                                <img src="assets/images/logoV-light.svg" class="card-logo card-logo-light" alt="logo light" height="22">
-                            </a>
-                        </div><!---end col-->
-                        <div class="col-auto">
-                            <ul class="list-unstyled hstack gap-2 mb-0">
-                                <li class="me-md-3">
-                                    <a href="#!" class="text-body fw-medium fs-15">Become a Selling</a>
-                                </li>
-                                <li class="d-none d-md-block">
-                                    <a href="#!" class="btn btn-soft-secondary" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-google-play align-middle me-1"></i> Download App
-                                    </a>
-                                </li>
-                                <li class="d-none d-md-block">
-                                    <a href="#!" class="btn btn-soft-primary" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-apple align-middle me-1"></i> Download App
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+<body>
+    <section
+        class="auth-page-wrapper position-relative bg-light min-vh-100 d-flex align-items-center justify-content-between">
+        <div class="auth-header position-fixed top-0 start-0 end-0 bg-body">
+            <div class="container-fluid">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-2">
+                        <a class="navbar-brand mb-2 mb-sm-0" href="index.html">
+                            <img src="assets/images/logoV.svg" class="card-logo card-logo-dark" alt="logo dark"
+                                height="22">
+                            <img src="assets/images/logoV-light.svg" class="card-logo card-logo-light" alt="logo light"
+                                height="22">
+                        </a>
+                    </div><!---end col-->
+                    <div class="col-auto">
+                        <ul class="list-unstyled hstack gap-2 mb-0">
+                            <li class="me-md-3">
+                                <a href="#!" class="text-body fw-medium fs-15">Become a Selling</a>
+                            </li>
+                            <li class="d-none d-md-block">
+                                <a href="#!" class="btn btn-soft-secondary" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <i class="bi bi-google-play align-middle me-1"></i> Download App
+                                </a>
+                            </li>
+                            <li class="d-none d-md-block">
+                                <a href="#!" class="btn btn-soft-primary" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <i class="bi bi-apple align-middle me-1"></i> Download App
+                                </a>
+                            </li>
+                        </ul>
                     </div>
-                </div><!--end container-fluid-->
-            </div>
-            <div class="w-100">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="auth-card mx-lg-3">
-                                <div class="card border-0 mb-0">
-                                    <div class="card-body text-center p-4">
-
-                                        <div class="text-center px-sm-5 mx-5">
-                                            <img src="assets/images/comingsoon.png" alt="" height="110">
-                                        </div>
-                                        <div class="mt-4 text-center pt-3">
-                                            <div class="position-relative">
-                                                <h4 class="fs-22 error-subtitle text-uppercase mb-0">Coming Soon</h4>
-                                                <div>
-                                                    <div class="row justify-content-center mt-5">
-                                                        <div class="col-lg-10">
-                                                            <div data-countdown="Oct 30, 2023" class="countdownlist"></div>
-                                                        </div>
+                </div>
+            </div><!--end container-fluid-->
+        </div>
+        <div class="w-100">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="auth-card mx-lg-3">
+                            <div class="card border-0 mb-0">
+                                <div class="card-body text-center p-4">
+                                    <div class="text-center px-sm-5 mx-5">
+                                        <img src="assets/images/comingsoon.png" alt="" height="110">
+                                    </div>
+                                    <div class="mt-4 text-center pt-3">
+                                        <div class="position-relative">
+                                            <h4 class="fs-22 error-subtitle text-uppercase mb-0">Coming Soon</h4>
+                                            <div>
+                                                <div class="row justify-content-center mt-5">
+                                                    <div class="col-lg-10">
+                                                        <div data-countdown="Oct 30, 2023" class="countdownlist"></div>
                                                     </div>
-                                                
-                                                    <div class="mt-5">
-                                                        <h5 class="fs-16">Get notified when we launch</h5>
-                                                        <p class="text-muted">Don't worry we will not spam you 😊</p>
-                                                    </div>
-                                                
-                                                    <form action="#!">
-                                                        <div class="countdown-input-subscribe mx-auto mt-4">
-                                                            <input type="email" class="form-control shadow" placeholder="Enter your email address" required />
-                                                            <button class="btn btn-primary" type="submit" id="button-email">Send<i class="ri-send-plane-2-fill align-bottom ms-2"></i></button>
-                                                        </div>
-                                                    </form>
                                                 </div>
+                                                <div class="mt-5">
+                                                    <h5 class="fs-16">Get notified when we launch</h5>
+                                                    <p class="text-muted">Don't worry we will not spam you 😊</p>
+                                                </div>
+                                                <form action="#!">
+                                                    <div class="countdown-input-subscribe mx-auto mt-4">
+                                                        <input type="email" class="form-control shadow"
+                                                            placeholder="Enter your email address" required />
+                                                        <button class="btn btn-primary" type="submit"
+                                                            id="button-email">Send<i
+                                                                class="ri-send-plane-2-fill align-bottom ms-2"></i></button>
+                                                    </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -97,31 +97,23 @@
                         </div>
                     </div>
                 </div>
-
-                <footer class="footer">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="text-center">
-                                    <p class="mb-0 text-muted">©
-                                        <script>document.write(new Date().getFullYear())</script> Recruitment world. Crafted with <i class="mdi mdi-heart text-danger"></i> by Nami
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
             </div>
-        </section>
-
-        <!-- JAVASCRIPT -->
-        <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/libs/simplebar/simplebar.min.js"></script>
-        <script src="assets/js/plugins.js"></script>
-
-        <!-- Countdown js -->
-        <script src="assets/js/pages/coming-soon.init.js"></script>
-
-    </body>
+            <!-- footer -->
+            <footer class="footer copyRight">
+                <script>document.write(new Date().getFullYear())</script> © عالم الاستقدام . تصميم وتطوير
+                <a href="https://nami-tec.com/" target="_blank">
+                    <img src="assets/images/namiFav.svg" alt="">
+                    Nami
+                </a>
+            </footer>
+        </div>
+    </section>
+    <!-- JAVASCRIPT -->
+    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/libs/simplebar/simplebar.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <!-- Countdown js -->
+    <script src="assets/js/pages/coming-soon.init.js"></script>
+</body>
 
 </html>
