--- a/blogs.html
+++ b/blogs.html
@@ -222,10 +222,10 @@
             </div>
         </div>
     </section>
-    <section class="section blog pt-5 blogIndex">
+    <section class="section blog pt-2 blogIndex">
         <div class="container">
             <div class="row mt-5">
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s1.webp" class="img-fluid" alt="">
                         <div class="card-body">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s2.webp" class="img-fluid" alt="">
                         <div class="card-body">
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s3.webp" class="img-fluid" alt="">
                         <div class="card-body">
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s1.webp" class="img-fluid" alt="">
                         <div class="card-body">
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s2.webp" class="img-fluid" alt="">
                         <div class="card-body">
@@ -340,7 +340,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-2">
                     <div class="card overflow-hidden">
                         <img src="assets/images/s3.webp" class="img-fluid" alt="">
                         <div class="card-body">
