--- a/recruitment-request.html
+++ b/recruitment-request.html
@@ -228,7 +228,7 @@
     <section class="section filter">
         <div class="container">
             <div class="row mb-5 p-2 justify-content-center align-items-center">
-                <button class="sortOpen">الفلاتر<i class="fas fa-sort"></i></button>
+                <button class="sortOpen open-filters">الفلاتر<i class="fas fa-sort"></i></button>
             </div>
             <div class="ecommerce-product gap-4">
                 <div id="sidebar" class="sidebar small-sidebar flex-shrink-0">
